core/minio/tenant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: "MinIO Tenant"
  labels:
    openshift.io/cluster-monitoring: 'true'
  name: minio
