core/minio/tenant/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio-console
  namespace: minio
spec:
  to:
    kind: Service
    name: minio-console
    weight: 100
  port:
    targetPort: http-console
